documentation.
- Add support for user defined ribonucleotides with phosphorothioate linkages
- Add support for JSON based ribonucleotides and updated to latest Modomics database
- fix bug in GaussFilter when using ppm as width (#6830)
- Add support to load parameter values from a JSON formatted .json file. (Accessible via -ini. This will be
  helpful for Common Workflow Language users and others)

New Tools:
- FLASHDeconv -- Ultra-fast high-quality deconvolution enables online processing of top-down MS data (TOPP)
- FLASHDeconvWizard -- An GUI assistant for FLASHDeconv execution.

------------------------------------------------------------------------------------------
----                                OpenMS 2.8     (released 2/2022)                  ----
------------------------------------------------------------------------------------------

- source + conda release only
- Restructuring of Imported CMake targets and pyOpenMS CMake
- Reduce exposition of third-party libraries to interface
- greatly improved pyOpenMS documentation and extra functions (in the pyopenms-extra submodule)
- Fixes IDMapper for isobaric labelling experiments (will lead to much more identifications)
- Deisotoping algorithm using KL
- PeptideIndexer supports ambiguous AA's in Peptide sequence (as reported by recent Mascot versions) (#5776)
- SeqAn external library removed from source tree (not needed anymore)
- Resolve compatibility issues between IDRipper and IDMerger (#4957)
- Basic MzTabM support for AccurateMassSearch
- Changed default parameter keep_unidentified_masses to "true" (AccurateMassSearch/AccurateMassSearchEngine)
- Added parameter allow_nterm_protein_cleavage to PeptideIndexer to support no cleavage.
- Fixes and improves TheoreticalSpectrumGenerationDialog in TOPPView (closes #5787) (#5883)

------------------------------------------------------------------------------------------