@@ -62,4 +62,4 @@ add_subdirectory(eol-bspline)
 add_subdirectory(IsoSpec)
 add_subdirectory(GTE)
 add_subdirectory(Quadtree)
-
+add_subdirectory(tool_description_lib)
